# getRequest

./: CMakeLists.txt  getrequest.cpp  getrequest.h  main.cpp
